feat: adding the main page of students + mocks of the other screens

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,17 +9,24 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
-        android:supportsRtl="true"
+        android:supportsRtl="false"
         android:theme="@style/Theme.Assignment2mobile"
-        tools:targetApi="31">
+        tools:targetApi="35">
+
+        <!-- Other Activities -->
+        <activity android:name=".activities.AddStudentActivity" />
+        <activity android:name=".activities.StudentDetailsActivity" />
+
+
+        <!-- Set StudentListActivity as the launcher activity -->
         <activity
-            android:name=".MainActivity"
+            android:name=".activities.StudentListActivity"
+            android:theme="@style/Theme.Assignment2mobile"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.Assignment2mobile">
+            >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
